--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <header class="header">
         <nav class="header-navigation">
-        <a href="./index.html" class="logo"><span class="logo-first-part">Web</span>Studio</a>
+        <a href="./index.html" class="logo">Web<span class="loga-second-part">Studio</span></a>
 
         <ul class="header-menu-list">
-            <li class="header-menu-item"><a href="" class="header-menu-link">Studio</a></li>
+            <li class="header-menu-item"><a href="./index.html" class="header-menu-link link-studio">Studio</a></li>
             <li class="header-menu-item"><a href="" class="header-menu-link">Portfolio</a></li>
             <li class="header-menu-item"><a href="" class="header-menu-link">Contacts</a></li>
         </ul>
@@ -133,7 +133,7 @@
     </main>
 
     <Footer class="footer">
-        <a href="./index.html" class="logo"><span class="logo-first-part">Web</span>Studio</a>
+        <a href="./index.html" class="logo">Web<span class="loga-second-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </Footer>
     
