--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="./index.html" class="logo">Web<span class="loga-second-part">Studio</span></a>
 
         <ul class="header-menu-list">
-            <li class="header-menu-item"><a href="./index.html" class="header-menu-link link-studio">Studio</a></li>
+            <li class="header-menu-item"><a href="./index.html" class="header-menu-link">Studio</a></li>
             <li class="header-menu-item"><a href="" class="header-menu-link">Portfolio</a></li>
             <li class="header-menu-item"><a href="" class="header-menu-link">Contacts</a></li>
         </ul>
