--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <nav class="header-navigation">
-        <a href="./index.html" class="logo">Web<span class="loga-second-part">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
 
         <ul class="header-menu-list">
             <li class="header-menu-item"><a href="./index.html" class="header-menu-link">Studio</a></li>
@@ -133,7 +133,7 @@
     </main>
 
     <Footer class="footer">
-        <a href="./index.html" class="logo">Web<span class="loga-second-part">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </Footer>
     
